fix(less): fix pfng list header text spacing (#3369)
fixes https://github.com/openshiftio/openshift.io/issues/4408

--- a/src/app/space/create/codebases/codebases.component.less
+++ b/src/app/space/create/codebases/codebases.component.less
@@ -19,6 +19,7 @@
 }
 
 .pfng-list-heading {
+  display: block;
   background-color: @color-pf-black-200 !important; /* stylelint-disable-line declaration-no-important */
 }
 
